--- a/board/board/src/main/resources/application.yml
+++ b/board/board/src/main/resources/application.yml
@@ -10,9 +10,10 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     properties:
       hibernate:
+        dialect: org.hibernate.dialect.Oracle12cDialect
         format_sql: true
 
   thymeleaf:
